-My first change

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div>
-      <h1>"new-feature-X" Welcome to Not So Advanced Cloud 4's application</h1>
+      <h1>"Welcome to Not So Advanced Cloud 4's application</h1>
     {{{body}}}
 </div>
 <div>
